# Calculatrice

./: CMakeLists.txt  Carre.h  Expression.cbp  Expression.depend  Expression.layout  Expressionv2.cbp  Grapheur2D_BOISSIE_MAULET.rar  Inverse.h  LogNeperien.h  OperateurUnaire.h  Oppose.h  Puissance.h  README.md  RacineCarre.h  ValeurAbsolue.h  expression.txt  main.cpp
Calculatrice-1-group7/: Expression.cbp  Expression.depend  Expression.layout
Calculatrice-1-group7/include/: ConstExpr.h  Constante.h
Calculatrice-1-group7/src/: Expression.cpp  OperateurBinaire.cpp  Soustraction.cpp
Calculatrice-2-group7_YBoumzibra/: Expression.depend  Expression.layout  main.cpp
Calculatrice-2-group7_YBoumzibra/include/: Addition.h  BinaryExpr.h  Division.h  Expression.h  Multiplication.h  OperateurBinaire.h  Soustraction.h  VarExpr.h
Calculatrice-2-group7_YBoumzibra/src/: Addition.cpp  Constante.cpp  Division.cpp  Multiplication.cpp
SqueletteV2/: Expression.cbp  Expression.depend  Expression.layout  Variable.cpp  Variable.h  expr.txt  main.cpp
SqueletteV2/include/: Division.h  Multiplication.h  OperateurBinaire.h  Soustraction.h
SqueletteV2/src/: Addition.cpp  Division.cpp  Expression.cpp  Multiplication.cpp  Soustraction.cpp
include/: BinaryExpr.h  Carre.h  ConstExpr.h  Expression.h  ExpressionManager.h  Graph3dDialog.h  Inverse.h  LogNeperien.h  OperateurBinaire.h  OperateurUnaire.h  Oppose.h  Puissance.h  RacineCarre.h  RacineCarree.h  SIngleton.h  SurfaceModel.h  TableDesSymboles.h  TestsRunner.h  ValeurAbsolue.h  Variable.h  expressionModel.h  graph2DDialog.h  mainwindow.h  tests_runner.h
squeletteV1-main/Squelette/: Expression.depend  expression.txt  main.cpp
squeletteV1-main/Squelette/include/: Addition.h  Constante.h  Expression.h
squeletteV1-main/Squelette/src/: Constante.cpp  OperateurBinaire.cpp
src/: Addition.cpp  Carre.cpp  Constante.cpp  Division.cpp  Expression.cpp  Graph2dDialog.cpp  Graph3dDialog.cpp  Inverse.cpp  LogNeperien.cpp  Multiplication.cpp  OperateurBinaire.cpp  OperateurUnaire.cpp  Oppose.cpp  Puissance.cpp  RacineCarre.cpp  RacineCarree.cpp  Soustraction.cpp  SurfaceModel.cpp  TableDesSymboles.cpp  TestsRunner.cpp  Tests_runner.cpp  ValeurAbsolue.cpp  Variable.cpp  main.cpp  mainwindow.cpp  mainwindow.ui
tests/: test_expression.cpp  test_singleton.cpp  tests_operateurs.cpp  tests_runner.cpp
